--- a/_scss/elements/_buttons.scss
+++ b/_scss/elements/_buttons.scss
@@ -1,8 +1,17 @@
 .btn {
   text-transform: uppercase;
   letter-spacing: 1px;
+  border: 2px solid black;
+  padding: 0.625em 2.25em;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-family: Montserrat, Arial, sans-serif;
+  font-size: .9em;
+  text-decoration: none;
+  color: black;
 
   &:hover {
     text-decoration: none;
+    color: black;
   }
 }
