--- a/css/main.css
+++ b/css/main.css
@@ -319,7 +319,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: "Mark OT", "Montserrat", "Open Sans", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
+  font-family: "Playfair Display", "Georgia", "Times New Roman", "Garamond", serif;
   font-weight: 500;
   line-height: 1.1;
   color: inherit; }
@@ -456,7 +456,7 @@ kbd {
   font-size: 90%;
   color: #fff;
   background-color: #212529;
-  border-radius: 0.2rem; }
+  border-radius: 0; }
   kbd kbd {
     padding: 0;
     font-size: 100%;
@@ -1302,7 +1302,7 @@ select.form-control:focus::-ms-value {
   padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
   line-height: 1.5;
-  border-radius: 0.2rem; }
+  border-radius: 0; }
 
 select.form-control-sm:not([size]):not([multiple]), .input-group-sm > select.form-control:not([size]):not([multiple]),
 .input-group-sm > select.input-group-addon:not([size]):not([multiple]),
@@ -1315,7 +1315,7 @@ select.form-control-sm:not([size]):not([multiple]), .input-group-sm > select.for
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
   line-height: 1.5;
-  border-radius: 0.3rem; }
+  border-radius: 0; }
 
 select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.form-control:not([size]):not([multiple]),
 .input-group-lg > select.input-group-addon:not([size]):not([multiple]),
@@ -1894,13 +1894,13 @@ fieldset[disabled] a.btn {
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
   line-height: 1.5;
-  border-radius: 0.3rem; }
+  border-radius: 0; }
 
 .btn-sm, .btn-group-sm > .btn {
   padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
   line-height: 1.5;
-  border-radius: 0.2rem; }
+  border-radius: 0; }
 
 .btn-block {
   display: block;
@@ -2202,13 +2202,13 @@ tbody.collapse.show {
   .input-group-sm > .input-group-btn > .input-group-addon.btn {
     padding: 0.25rem 0.5rem;
     font-size: 0.875rem;
-    border-radius: 0.2rem; }
+    border-radius: 0; }
   .input-group-addon.form-control-lg,
   .input-group-lg > .input-group-addon,
   .input-group-lg > .input-group-btn > .input-group-addon.btn {
     padding: 0.5rem 1rem;
     font-size: 1.25rem;
-    border-radius: 0.3rem; }
+    border-radius: 0; }
   .input-group-addon input[type="radio"],
   .input-group-addon input[type="checkbox"] {
     margin-top: 0; }
@@ -3017,12 +3017,12 @@ tbody.collapse.show {
   line-height: 1.5; }
 
 .pagination-lg .page-item:first-child .page-link {
-  border-top-left-radius: 0.3rem;
-  border-bottom-left-radius: 0.3rem; }
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0; }
 
 .pagination-lg .page-item:last-child .page-link {
-  border-top-right-radius: 0.3rem;
-  border-bottom-right-radius: 0.3rem; }
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0; }
 
 .pagination-sm .page-link {
   padding: 0.25rem 0.5rem;
@@ -3030,12 +3030,12 @@ tbody.collapse.show {
   line-height: 1.5; }
 
 .pagination-sm .page-item:first-child .page-link {
-  border-top-left-radius: 0.2rem;
-  border-bottom-left-radius: 0.2rem; }
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0; }
 
 .pagination-sm .page-item:last-child .page-link {
-  border-top-right-radius: 0.2rem;
-  border-bottom-right-radius: 0.2rem; }
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0; }
 
 .badge {
   display: inline-block;
@@ -3128,7 +3128,7 @@ tbody.collapse.show {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
   background-color: #e9ecef;
-  border-radius: 0.3rem; }
+  border-radius: 0; }
   @media (min-width: 576px) {
     .jumbotron {
       padding: 4rem 2rem; } }
@@ -3535,7 +3535,7 @@ button.close {
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 0.3rem;
+  border-radius: 0;
   outline: 0; }
 
 .modal-backdrop {
@@ -3709,7 +3709,7 @@ button.close {
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 0.3rem; }
+  border-radius: 0; }
   .popover .arrow {
     position: absolute;
     display: block;
@@ -3801,8 +3801,8 @@ button.close {
   color: inherit;
   background-color: #f7f7f7;
   border-bottom: 1px solid #ebebeb;
-  border-top-left-radius: calc(0.3rem - 1px);
-  border-top-right-radius: calc(0.3rem - 1px); }
+  border-top-left-radius: calc(0 - 1px);
+  border-top-right-radius: calc(0 - 1px); }
   .popover-header:empty {
     display: none; }
 
@@ -6134,7 +6134,7 @@ a.text-dark:focus, a.text-dark:hover {
   visibility: hidden !important; }
 
 body {
-  font-family: "Georgia", "Times New Roman", "Garamond", serif; }
+  font-family: "Mark OT", "Montserrat", "Open Sans", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif; }
 
 body {
   font-size: 16px; }
@@ -6155,22 +6155,31 @@ h1, h2, h3, h4 {
   text-transform: uppercase; }
 
 .pull-quote {
-  font-family: "Georgia", "Times New Roman", "Garamond", serif;
-  color: #295E6F;
+  font-family: "Mark OT", "Montserrat", "Open Sans", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
+  color: #FFCF00;
   font-size: 1.2rem;
   font-weight: 300; }
   .pull-quote__name {
     font-size: .9rem;
-    color: #295E6F;
+    color: #FFCF00;
     font-weight: 700;
     text-transform: uppercase;
-    font-family: "Mark OT", "Montserrat", "Open Sans", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif; }
+    font-family: "Playfair Display", "Georgia", "Times New Roman", "Garamond", serif; }
 
 .btn {
   text-transform: uppercase;
-  letter-spacing: 1px; }
+  letter-spacing: 1px;
+  border: 2px solid black;
+  padding: 0.625em 2.25em;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-family: Montserrat, Arial, sans-serif;
+  font-size: .9em;
+  text-decoration: none;
+  color: black; }
   .btn:hover {
-    text-decoration: none; }
+    text-decoration: none;
+    color: black; }
 
 [class^="icon-"], [class*=" icon-"] {
   height: 32px;
@@ -6198,7 +6207,7 @@ footer {
       border-radius: 100%;
       background-color: #818a91; }
       footer .social__link:hover {
-        background-color: #295E6F; }
+        background-color: #FFCF00; }
     footer .social svg {
       fill: white;
       width: 22px;
@@ -6232,7 +6241,34 @@ a.logo {
     display: inline-block;
     fill: white; }
     a.logo svg:hover {
-      fill: #69b1c8; }
+      fill: #ffec99; }
+
+body {
+  background: url(/img/miserere-bg.jpg) no-repeat center center fixed;
+  background-size: cover; }
+
+.splash {
+  min-height: 100vh; }
+
+h1 {
+  color: #FFCF00;
+  font-size: 6rem;
+  letter-spacing: .8rem; }
+
+h4 {
+  color: #FFCF00;
+  font-style: italic; }
+
+.btn {
+  border-color: #FFCF00;
+  color: #FFCF00; }
+  .btn:hover {
+    text-decoration: none;
+    background-color: #FFCF00;
+    color: black; }
+
+For developement body * {
+  background: rgba(10, 20, 30, 0.1); }
 
 .no-gutter > [class*='col-'] {
   padding-right: 0;
