--- a/css/main.css
+++ b/css/main.css
@@ -6267,7 +6267,7 @@ h4 {
     background-color: #FFCF00;
     color: black; }
 
-For developement body * {
+body * {
   background: rgba(10, 20, 30, 0.1); }
 
 .no-gutter > [class*='col-'] {
