--- a/_scss/pages/_home.scss
+++ b/_scss/pages/_home.scss
@@ -28,3 +28,24 @@ h4 {
     color: black;
   }
 }
+
+.floating-cutout {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 90;
+}
+
+.video-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.video-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
