--- a/css/main.css
+++ b/css/main.css
@@ -6216,32 +6216,151 @@ footer {
   footer .ebury-logo {
     width: 50px; }
 
-.navbar .btn {
-  font-size: 0.875rem;
-  color: rgba(255, 255, 255, 0.8);
-  background-color: transparent;
-  border: none; }
-  .navbar .btn--signup {
-    border: 1px solid rgba(255, 255, 255, 0.8); }
-  .navbar .btn:hover, .navbar .btn:focus, .navbar .btn:active {
-    border-color: white;
-    color: white; }
+.button_container {
+  position: fixed;
+  top: 5%;
+  right: 2%;
+  height: 27px;
+  width: 35px;
+  cursor: pointer;
+  z-index: 100;
+  transition: opacity .25s ease; }
+  .button_container:hover {
+    opacity: .7; }
+  .button_container.active .top {
+    -webkit-transform: translateY(11px) translateX(0) rotate(45deg);
+            transform: translateY(11px) translateX(0) rotate(45deg);
+    background: #000; }
+  .button_container.active .middle {
+    opacity: 0;
+    background: #000; }
+  .button_container.active .bottom {
+    -webkit-transform: translateY(-11px) translateX(0) rotate(-45deg);
+            transform: translateY(-11px) translateX(0) rotate(-45deg);
+    background: #000; }
+  .button_container span {
+    background: #FFCF00;
+    border: none;
+    height: 5px;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all .35s ease;
+    cursor: pointer; }
+    .button_container span:nth-of-type(2) {
+      top: 11px; }
+    .button_container span:nth-of-type(3) {
+      top: 22px; }
 
-@media (max-width: 767px) {
-  .navbar .navbar-toggleable-sm {
-    padding-top: 1rem; } }
-
-a.logo {
-  display: inline-block;
-  width: 150px;
-  height: 30px; }
-  a.logo svg {
-    width: 150px;
+.overlay {
+  position: fixed;
+  background: #FFCF00;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .35s, visibility .35s, height .35s;
+  overflow: hidden;
+  z-index: 99; }
+  .overlay.open {
+    opacity: 1;
+    visibility: visible;
+    height: 100%; }
+    .overlay.open li {
+      -webkit-animation: fadeInRight .5s ease forwards;
+              animation: fadeInRight .5s ease forwards;
+      -webkit-animation-delay: .35s;
+              animation-delay: .35s; }
+      .overlay.open li:nth-of-type(2) {
+        -webkit-animation-delay: .4s;
+                animation-delay: .4s; }
+      .overlay.open li:nth-of-type(3) {
+        -webkit-animation-delay: .45s;
+                animation-delay: .45s; }
+      .overlay.open li:nth-of-type(4) {
+        -webkit-animation-delay: .50s;
+                animation-delay: .50s; }
+  .overlay nav {
     position: relative;
+    height: 70%;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+    font-size: 50px;
+    font-family: 'Playfair', serif;
+    font-weight: 400;
+    text-align: center; }
+  .overlay ul {
+    list-style: none;
+    padding: 0;
+    margin: 0 auto;
     display: inline-block;
-    fill: white; }
-    a.logo svg:hover {
-      fill: #ffec99; }
+    position: relative;
+    height: 100%; }
+    .overlay ul li {
+      display: block;
+      height: 25%;
+      height: calc(100% / 4);
+      min-height: 50px;
+      position: relative;
+      opacity: 0; }
+      .overlay ul li a {
+        display: block;
+        position: relative;
+        color: #000;
+        text-decoration: none;
+        overflow: hidden;
+        text-transform: uppercase; }
+        .overlay ul li a:hover:after, .overlay ul li a:focus:after, .overlay ul li a:active:after {
+          width: 100%; }
+        .overlay ul li a:after {
+          content: '';
+          position: absolute;
+          bottom: 0;
+          left: 50%;
+          width: 0%;
+          -webkit-transform: translateX(-50%);
+                  transform: translateX(-50%);
+          height: 3px;
+          background: #000;
+          transition: .35s; }
+
+@-webkit-keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    left: 20%; }
+  100% {
+    opacity: 1;
+    left: 0; } }
+
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    left: 20%; }
+  100% {
+    opacity: 1;
+    left: 0; } }
+
+body:before, body:after {
+  content: "";
+  position: fixed;
+  background: #FFCF00;
+  left: 0;
+  right: 0;
+  height: 10px; }
+
+body:before {
+  top: 0; }
+
+body:after {
+  bottom: 0; }
+
+body {
+  border-left: 10px solid #FFCF00;
+  border-right: 10px solid #FFCF00; }
 
 body {
   background: url(/img/miserere-bg.jpg) no-repeat center center fixed;
@@ -6267,8 +6386,24 @@ h4 {
     background-color: #FFCF00;
     color: black; }
 
-body * {
-  background: rgba(10, 20, 30, 0.1); }
+.floating-cutout {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 90; }
+
+.video-responsive {
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  position: relative;
+  height: 0; }
+
+.video-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute; }
 
 .no-gutter > [class*='col-'] {
   padding-right: 0;
