Update with trailer

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,10 +8,10 @@
 <div class="overlay" id="overlay">
   <nav class="overlay-menu">
     <ul>
-      <li ><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Work</a></li>
-      <li><a href="#">Contact</a></li>
+      <li ><a href="index.html">Home</a></li>
+      <li><a href="trailer.html">Trailer</a></li>
+      <li><a href="about.html">About</a></li>
+      <!-- <li><a href="mailto:erasmusdearos@gmail.com">erasmusdearos@gmail.com</a></li> -->
     </ul>
   </nav>
 </div>
