Kickstarter trailer update

--- a/_scss/globals/_typography.scss
+++ b/_scss/globals/_typography.scss
@@ -27,6 +27,13 @@ body {
 }
 
 // headings
-h1,h2,h3, h4 {
+h1,h2,h3 {
   text-transform: uppercase;
+}
+
+@include media-breakpoint-down(md)  {
+  h1.display-1 {
+    font-size: 3.5rem;
+  }
+
 }
