--- a/_scss/sections/_border.scss
+++ b/_scss/sections/_border.scss
@@ -1,18 +1,24 @@
-body:before, body:after {
-    content: "";
-    position: fixed;
-    background: $brand-primary;
-    left: 0;
-    right: 0;
-    height: 10px;
-}
-body:before {
-    top: 0;
-}
-body:after {
-    bottom: 0;
-}
-body {
+@include media-breakpoint-up(md) {
+  body {
+    &:before, &:after {
+        content: "";
+        position: fixed;
+        background: $brand-primary;
+        left: 0;
+        right: 0;
+        height: 10px;
+    }
+
+    &:before {
+      top: 0;
+    }
+
+    &:after {
+      bottom: 0;
+    }
+
     border-left: 10px solid $brand-primary;
     border-right: 10px solid $brand-primary;
+
+  }
 }
