--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Erasmus de Aros">
-        <meta http-equiv="refresh" content="1;url=http://kck.st/2wzg8Nh">
-    <script>window.location.replace("http://kck.st/2wzg8Nh");</script>
+        <meta http-equiv="refresh" content="1;url=https://www.facebook.com/misererefilm/">
+    <script>window.location.replace("https://www.facebook.com/misererefilm/");</script>
 
     <title>{% if page.title %}{{ page.title | escape }} - {{ site.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
